...
  const isLoading = useAuthStore(s => s.isLoading);

  return (
    <SafeAreaView
      style={{ flex: 1 }}
      className="bg-background"
      testID="welcome-screen"
    >
      <View
        style={{
          flex: 1,
          paddingHorizontal: SCREEN_CONTENT_STYLE.padding,
          paddingBottom: SCREEN_CONTENT_STYLE.padding,
...
